AksDeployment/deployment-dep-service-001.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep-service-001
spec:
  selector: # Define the wrapping strategy
    matchLabels: # Match all pods with the defined labels
      app: dep-service-001 # Labels follow the `name: value` template
  template: # This is the template of the pod inside the deployment
    metadata:
      labels:
        app: dep-service-001
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - image: my-container-registry.azurecr.io/dep/service001:0.0.1
          name: dep-service-001
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 80
              name: http
