AksDeployment/service-service-002.yaml
#service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service002
spec:
  type: ClusterIP
  selector:
    app: dep-service-002
  ports:
    - port: 80 # SERVICE exposed port
      name: http # SERVICE port name
      protocol: TCP # The protocol the SERVICE will listen to
      targetPort: http # Port to forward to in the POD
